Updated readme, added a license